--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ devtools::install_github("cynkra/blockr.ui")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+To run the app:
 
 ```{r, eval=FALSE, echo = TRUE}
 library(blockr.ui)
@@ -49,4 +49,5 @@ server <- function(input, output, session) {
 shinyApp(ui, server)
 ```
 
+![](./man/figures/blockr-ui-v2.gif)
 ![](./man/figures/blockr2.png)
