prepare POC release

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,11 +34,21 @@ devtools::install_github("cynkra/blockr.ui")
 To run the app:
 
 ```{r, eval=FALSE, echo = TRUE}
+library(blockr.core)
+library(blockr.dplyr)
+# library(blockr.ai)
 library(blockr.ui)
 library(bslib)
 library(shiny)
 
+shiny::addResourcePath(
+  "assets",
+  system.file("examples/demo/www", package = "blockr.ui")
+)
+
 ui <- page_fillable(
+  shinyjs::useShinyjs(),
+  tags$script(src = "assets/custom.js"),
   main_ui("board")
 )
 
@@ -47,6 +57,7 @@ server <- function(input, output, session) {
 }
 
 shinyApp(ui, server)
+
 ```
 
 ![](./man/figures/blockr-ui-v2.gif)
