update doc + fix breaking change

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of blockr.ui is to provide a user interface for `{blockr.core}`.
+The goal of blockr.ui is to provide an alternative user interface for `{blockr.core}`.
 
 ## Installation
 
@@ -36,7 +36,7 @@ To run the app:
 ```{r, eval=FALSE, echo = TRUE}
 library(blockr.core)
 library(blockr.dplyr)
-# library(blockr.ai)
+library(blockr.ai)
 library(blockr.ui)
 library(bslib)
 library(shiny)
@@ -61,5 +61,17 @@ server <- function(input, output, session) {
 shinyApp(ui, server)
 ```
 
-![](./man/figures/blockr-ui-v2.gif)
-![](./man/figures/blockr2.png)
+### Create a new block
+![](./man/figures/blockr-new.png)
+
+### Block properties
+![](./man/figures/blockr-properties.png)
+
+### Append block and invalid state
+![](./man/figures/blockr-invalid.png)
+
+### Join independant data
+![](./man/figures/blockr-join.png)
+
+### Rearrange output on a grid
+![](./man/figures/blockr-dashboard.png)
