--- a/README.Rmd
+++ b/README.Rmd
@@ -31,34 +31,14 @@ devtools::install_github("cynkra/blockr.ui")
 
 ## Example
 
-To run the app:
+To run the demo app:
 
 ```{r, eval=FALSE, echo = TRUE}
-library(blockr.core)
 library(blockr.dplyr)
 library(blockr.ai)
 library(blockr.ui)
-library(bslib)
-library(shiny)
 
-shiny::addResourcePath(
-  "assets",
-  system.file("examples/demo/www", package = "blockr.ui")
-)
-
-app_board <- new_board(class = "custom_board")
-
-ui <- page_fillable(
-  shinyjs::useShinyjs(),
-  tags$script(src = "assets/custom.js"),
-  main_ui("main", app_board)
-)
-
-server <- function(input, output, session) {
-  main_server("main", app_board)
-}
-
-shinyApp(ui, server)
+run_demo_app()
 ```
 
 ### Create a new block
