--- a/README.Rmd
+++ b/README.Rmd
@@ -37,8 +37,10 @@ devtools::install_github("cynkra/blockr.ui")
 To run the demo app:
 
 ```{r, eval=FALSE, echo = TRUE}
-library(blockr.dplyr)
 library(blockr.ui)
+library(blockr.dplyr)
+library(blockr.sdtm)
+library(blockr.io)
 
 run_demo_app()
 ```
