more test coverage

--- a/index.qmd
+++ b/index.qmd
@@ -46,6 +46,8 @@ library(blockr.ui)
 library(blockr.dplyr)
 library(blockr.sdtm)
 library(blockr.io)
+
+Sys.setenv("DASHBOARD_TYPE" = "dock")
 run_demo_app()
 ```
 
