audit pkgdown + add custom module vignette.

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,8 +29,7 @@ The goal of blockr.ui is to provide an alternative user interface for `{blockr.c
 You can install the development version of blockr.ui from [GitHub](https://github.com/) with:
 
 ``` r
-# install.packages("devtools")
-devtools::install_github("cynkra/blockr.ui")
+pak::pak("BristolMyersSquibb/blockr.ui")
 ```
 
 ## Example
