--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/cynkra/blockr.ui/graph/badge.svg)](https://app.codecov.io/gh/cynkra/blockr.ui)
 <!-- badges: end -->
 
-The goal of blockr.ui is to provide an alternative user interface for `{blockr.core}`.
+The goal of `blockr.ui` is to provide an alternative user interface for [`blockr.core`](https://bristolmyerssquibb.github.io/blockr.core/). With `blockr.ui` you can create, edit and run __data analysis__ pipelines in a user-friendly way with point and click and drag and drop actions. It builds on top of the blockr ecosystem, which provides building [blocks](https://github.com/BristolMyersSquibb/blockr.core/?tab=readme-ov-file#extending-blockr) from data import to data manipulation and visualisation with R. The code is reproducible and pipelines can be saved and shared with collaborators. Finally, `blockr.ui` is designed to be extensible, so you can add your own blocks or add extra [modules](https://bristolmyerssquibb.github.io/blockr.ui/articles/app-modules.html) to it.
 
 ## Installation
 
@@ -62,7 +62,7 @@ All panels can be resized and rearranged to your liking.
     - Zoom in or out on the network.
     - ...
 
-(3) In the center of the panel is displayed the current blockr pipeline where __blocks__ are represented as __nodes__ and connections as __edges__. In our example, we have 1 invalid __block__ which __state__ is depicted as orange. The reason is explained in the bottom right corner of the UI where __error__ messages are displayed (in this specific case, the block is missing input data). Blocks can be grouped together within __stacks__, as shown with the grey circle. This is convenient as stacks can be collapsed or expanded, thereby saving significant amount of space in the UI. You can also drag and drop nodes in or out of a stack to add/remove them, respectively. Pretty much all elements on the canvas have a right click action, also known as a __context menu__. For example, right-clicking on a node will show you options to remove it, add another node right after, connect it to another node or add/remove it in the right side dashboard. Right clicking on the canvas will show you options to add a new block or add a new stack. These actions can be customised as explained in the following [vignette](app-modules.html).
+(3) In the center of the panel is displayed the current blockr pipeline where __blocks__ are represented as __nodes__ and connections as __edges__. In our example, we have 1 invalid __block__ which __state__ is depicted as orange. The reason is explained in the bottom right corner of the UI where __error__ messages are displayed (in this specific case, the block is missing input data). Blocks can be grouped together within __stacks__, as shown with the grey circle. This is convenient as stacks can be collapsed or expanded, thereby saving significant amount of space in the UI. You can also drag and drop nodes in or out of a stack to add/remove them, respectively. Pretty much all elements on the canvas have a right click action, also known as a __context menu__. For example, right-clicking on a node will show you options to remove it, add another node right after, connect it to another node or add/remove it in the right side dashboard. Right clicking on the canvas will show you options to add a new block or add a new stack. These actions can be customised as explained in the following [vignette](https://bristolmyerssquibb.github.io/blockr.ui/articles/app-modules.html).
 
 (4) The bottom right corner hosts the __properties__ panels. It displays the properties of the any existing block. They can be closed but reappear if you click on the corresponding node in the graph. You can edit these properties directly in the UI, like changing the currently selected data. In future releases, you will be able to change the block name and more.
 
