--- a/index.qmd
+++ b/index.qmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/cynkra/blockr.ui/graph/badge.svg)](https://app.codecov.io/gh/cynkra/blockr.ui)
 <!-- badges: end -->
 
-The goal of blockr.ui is to provide an alternative user interface for [`{blockr.core}`](https://cynkra.github.io/blockr.core/).
+The goal of `blockr.ui` is to provide an alternative user interface for [`blockr.core`](https://bristolmyerssquibb.github.io/blockr.core/). With `blockr.ui` you can create, edit and run __data analysis__ pipelines in a user-friendly way with point and click and drag and drop actions. It builds on top of the blockr ecosystem, which provides building [blocks](https://github.com/BristolMyersSquibb/blockr.core/?tab=readme-ov-file#extending-blockr) from data import to data manipulation and visualisation with R. The code is reproducible and pipelines can be saved and shared with collaborators. Finally, `blockr.ui` is designed to be extensible, so you can add your own blocks or add extra [modules](https://bristolmyerssquibb.github.io/blockr.ui/articles/app-modules.html) to it.
 
 ## Installation
 
